# AI-Image-Studio

./: README.md  install.sh  pyproject.toml  requirements-ai.txt  requirements-dev.txt  requirements-minimal.txt  requirements.txt
scripts/: sd_cpp_ab_test.py  sd_cpp_safetensors_test.py  test_generation.py  update_model_catalog.py
src/ai_image_studio/: __init__.py  __main__.py  main.py
src/ai_image_studio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ai_image_studio/core/: __init__.py  data_types.py  execution.py  graph.py  layers.py  node_types.py  project.py  workflow_metadata.py  workspace.py
src/ai_image_studio/filters/: __init__.py  filter_registry.py  gmic_runner.py
src/ai_image_studio/nodes/: __init__.py
src/ai_image_studio/nodes/enhancement/: __init__.py  upscale.py
src/ai_image_studio/nodes/filter/: __init__.py  gmic.py
src/ai_image_studio/nodes/generation/: __init__.py  text_to_image.py
src/ai_image_studio/nodes/input/: __init__.py  prompt.py
src/ai_image_studio/nodes/output/: __init__.py  preview.py
src/ai_image_studio/nodes/utility/: __init__.py
src/ai_image_studio/providers/: __init__.py  base.py  bfl.py  gemini.py  openai.py  openrouter.py  registry.py  sd_cpp.py  sd_cpp_models.py  stability.py  upscaler.py  upscaler_download.py  xai.py
src/ai_image_studio/scripting/: __init__.py
src/ai_image_studio/state/: __init__.py
src/ai_image_studio/ui/: __init__.py  main_window.py
src/ai_image_studio/ui/dialogs/: __init__.py  model_catalog.py  model_download.py  provider_settings.py
src/ai_image_studio/ui/node_graph/: __init__.py  canvas.py
src/ai_image_studio/ui/output_studio/: __init__.py  canvas.py
src/ai_image_studio/ui/panels/: __init__.py  console.py  gallery.py  layers.py  node_library.py  properties.py
src/ai_image_studio/ui/widgets/: __init__.py
src/ai_image_studio/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_execution_cancellation.py  test_graph.py  test_layers.py  test_sd_cpp_models.py  test_sd_cpp_provider.py  test_upscaler.py
