[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-image-studio"
version = "0.1.0"
description = "A powerful, Linux-native AI image generation and editing application"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AI Image Studio Contributors"}
]
keywords = ["ai", "image", "generation", "stable-diffusion", "node-editor", "qt"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Editors",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "PySide6>=6.6.0",
    "PyOpenGL>=3.1.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "aiohttp>=3.9.0",
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
ai = [
    "torch>=2.0.0",
    "diffusers>=0.25.0",
    "transformers>=4.35.0",
    "accelerate>=0.25.0",
    "safetensors>=0.4.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
all = ["ai-image-studio[ai,dev]"]

[project.scripts]
ai-image-studio = "ai_image_studio.main:main"

[project.urls]
Homepage = "https://github.com/example/ai-image-studio"
Documentation = "https://github.com/example/ai-image-studio/docs"
Repository = "https://github.com/example/ai-image-studio"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in argument defaults
]

[tool.ruff.isort]
known-first-party = ["ai_image_studio"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
qt_api = "pyside6"
